# energy_reading

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  PLANNING.md  README.md  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json  tree.txt
.github/workflows/: ci.yaml
charts/enery_reading/: Chart.yaml  values.yaml
charts/enery_reading/templates/: NOTES.txt  _helpers.tpl  consumer-autoscaler.yaml  consumer.yaml  frontend.yaml  producer.yaml  redis-service.yaml
docs/: design_decisions_and_tradeoffs.md  how_to_build.md  relevant_scripts.md
manual_tests/: e2e_k8s.md
redis/: create_redis.bash
services/consumer/: README.md  dockerfile  main.py  pyproject.toml
services/frontend/: Dockerfile  README.md  main.py  pyproject.toml
services/producer/: Dockerfile  README.md  main.py  pyproject.toml
shared_lib/: README.md  pyproject.toml
shared_lib/src/shared_lib/: __init__.py  config.py  logger.py  model.py
tests/: E2E_MANUAL.md  test_consumer.py  test_producer.py
