[project]
name = "energy-reading"
version = "0.1.0"
description = "Energy Readings Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["services/*", "shared_lib"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",    # prevent commits without lint
    "pytest>=9.0.2",        # test frame work
    "ruff>=0.15.0",         # lint
    "ty>=0.0.16",           # mypy alternative
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["shared_lib"]

[tool.ty.environment]
python-version = "3.12"
