[project]
name = "energy-reading"
version = "0.1.0"
description = "Energy Readings Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["services/*", "shared_lib"]
exclude = ["services/__pycache__"]

[tool.uv.sources]
shared_lib = { workspace = true }

# uv sync --all-groups --all-packages
[dependency-groups]
# https://peps.python.org/pep-0735/
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0", # Corrected version
    "httpx>=0.28.1",
]
typing = [
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["shared_lib"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
pythonpath = ["."]

testpaths = ["tests"]
asyncio_mode = "auto"

